# pet-vet-rag-agent

./: .gitignore  CNKI论文下载清单.md  ENGINEERING_LOG.md  README.md  RESUME.md  page-snapshot.txt  pyproject.toml  run.sh
docs/: structured_output_spec.md
src/: cli.py  config.py  ingest.py
src/agent/: context.py  multi_agent.py  orchestrator.py  prompts.py  tools.py
src/api/: __init__.py  main.py  models.py  routes.py
src/document/: chunker.py  parser.py
src/mcp/: __init__.py  server.py  tool_provider.py
src/observability/: __init__.py  logger.py  monitor.py
src/retrieval/: embeddings.py  hybrid_search.py  vector_store.py
src/ui/: app.py  components.py
tests/: benchmark.py  benchmark_questions.json  benchmark_results.json  test_context.py  test_orchestrator.py  test_tools.py
